# snailTracker

./: Makefile.am  README.md  configure.ac  tracker  useTracker.sh
R/: script.R
src/: ParticleFilter.cpp  ParticleFilter.hpp  ROI.cpp  ROI.hpp  defines.hpp  main.cpp
